# zero2prod

./: .env  Cargo.toml  Dockerfile  HTTP ErrorCode.md  cmd.md  configuration.yaml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20250828171847_make_status_not_null_in_subscriptions.sql  20250910161008_make_status_not_null_in_subscriptions.sql  20250917164632_create_users_table.sql  20250918075210_rename_password_column.sql  20251003200940_seed_user.sql
scripts/: init_db.sh  init_db_windows.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helper.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
