[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = {version = "0.8", features = ["serde"]}
uuid = {version = "1", features = ["v4"]}
chrono = "0.4.15"
config = "0.13"
serde = "1.0"
actix-web = "4"
tokio = {version = "1.40.0", features = ["full"]}

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate", 
    "offline"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"