[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
validator = "0.14"
claim = "0.5"
unicode-segmentation = "1"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
serde-aux = "3"
secrecy = {version = "0.8", features = ["serde"]}
uuid = {version = "1", features = ["v4"]}
chrono = "0.4.15"
config = "0.13"
serde = "1.0"
actix-web = "4"
tokio = {version = "1.40.0", features = ["full"]}

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate", 
    "offline"
]

[dev-dependencies]
serde_json = "1"
wiremock = "0.5"
tokio = {version = "1", features = ["rt", "macros"]}
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "2.4"
rand = "0.8"
rand_core = "0.6"
once_cell = "1"