[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde ={ version = "1", features = ["derive"]}
config = "0.13"
uuid = { version =  "1", features = ["v4"]}
chrono = "0.4"
tracing = { version = "0.1", features = ["log"]}
env_logger = "0.9"

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
